--- a/style.css
+++ b/style.css
@@ -597,7 +597,7 @@ h1 span {
   margin-top: 50px;
   margin-bottom: 30px;
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
   text-align: start;
   font-size: var(--fontSize);
@@ -2245,10 +2245,10 @@ body {
   }
   .actionBtn {
     margin: 2px;
-    width: 150px;
-    height: 50px;
+    width: fit-content;
+    height: fit-content;
     border: 1px solid #333;
-    font-size: var(--fontSize);
+    font-size: 0.7rem;
     cursor: pointer;
     -webkit-tap-highlight-color: transparent;
     display: flex;
@@ -2258,11 +2258,16 @@ body {
     z-index: 0;
     transition: 1s;
     color: #fff;
+    padding: 20px;
+  }
+  .actionBtn::before {
+    width: fit-content;
+    height: fit-content;
   }
 
   .actionBtn::after {
-    width: 150px;
-    height: 50px;
+    width: fit-content;
+    height: fit-content;
   }
   .menu {
     left: 88vw;
@@ -2300,14 +2305,6 @@ body {
     width: 100vw;
     text-align: center;
     height: fit-content;
-  }
-  .Extra {
-    font-size: 0.8rem;
-    align-items: center;
-    justify-content: center;
-  }
-  .Extra .button {
-    font-size: var(--fontSize);
   }
   #contactContainer {
     display: grid;
@@ -2405,8 +2402,9 @@ body {
     width: fit-content;
   }
   .actionBtn {
-    width: 120px;
-    height: 30px;
+    font-size: var(--fontSize);
+    width: 150px;
+    height: 50px;
     border: 1px solid #333;
     cursor: pointer;
     -webkit-tap-highlight-color: transparent;
