--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ body {
 html {
   width: 100vw;
   overflow-x: hidden;
-  overflow-y: auto; /* Ensure vertical scrolling by default */
+  overflow-y: auto;
   scroll-behavior: smooth;
 }
 
@@ -67,8 +67,10 @@ html {
 }
 #Loading {
   font-family: 'Pixelify Sans', sans-serif;
-  position: relative;
-  top: 40%;
+  position: absolute;
+  top: 90vh;
+  left: 50%;
+  transform: translateX(-50%);
 }
 .webchat {
   display: none;
@@ -593,16 +595,18 @@ h1 span {
   font-family: var(--mainFont);
 }
 .Extra {
-  width: 100%;
+  width: 90%;
   margin-top: 50px;
   margin-bottom: 30px;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   text-align: start;
   font-size: var(--fontSize);
-  color: #fff;
   padding: 0px;
+}
+.Activepoint {
+  color: var(--brightGreen);
 }
 .View {
   display: none;
@@ -1081,7 +1085,7 @@ h1 span {
 .project-preview img {
   width: 400px;
   height: auto;
-  border-radius: 5px;
+  border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   transition: transform 0.3s;
 }
@@ -1170,12 +1174,12 @@ h1 span {
 
 .actionBtn::before {
   height: 50px;
-  width: 130px;
+  height: 50px;
 }
 
 .actionBtn::after {
   width: 150px;
-  height: 30px;
+  height: 50px;
 }
 
 .noselect {
@@ -1395,8 +1399,6 @@ h1 span {
 .ui-btn:hover,
 .ui-btn:focus {
   background: var(--btn-default-bg);
-  box-shadow: 0px 0px 10px 0px var(--brightGreen);
-  border: 2px solid var(--brightGreen);
 }
 
 .ui-btn:hover span,
@@ -2405,8 +2407,8 @@ body {
     width: fit-content;
   }
   .actionBtn {
-    width: 120px;
-    height: 30px;
+    width: 150px;
+    height: 50px;
     border: 1px solid #333;
     cursor: pointer;
     -webkit-tap-highlight-color: transparent;
@@ -2420,12 +2422,12 @@ body {
   }
 
   .actionBtn::before {
-    width: 120px;
-    height: 30px;
+    width: 150px;
+    height: 50px;
   }
   .actionBtn::after {
-    width: 120px;
-    height: 30px;
+    width: 150px;
+    height: 50px;
   }
   .menu {
     left: 85vw;
