--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ body {
 html {
   width: 100vw;
   overflow-x: hidden;
-  overflow-y: auto;
+  overflow-y: hidden;
   scroll-behavior: smooth;
 }
 
