--- a/style.css
+++ b/style.css
@@ -222,22 +222,25 @@ html {
   grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
   gap: 20px;
   padding: 20px;
-  /* background-color: #0a0a0a; */
   height: fit-content;
+
+}
+.social-posts-container a{
+  text-decoration: none;
 }
 
 .social-post {
   font-size: var(--fontSize);
   cursor: pointer;
-  background-color: #000;
-  border: 1px solid var(--grey);
-  border-left: 5px solid var(--grey);
-  padding: 15px;
-  transition: transform 0.5s ease;
+  background: white;
+  padding: 30px;
+  border-radius: 15px;
+  box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease-in-out;
+  color: #555;
 }
-
-.social-post:hover {
-  transform: translateY(-5px);
+.social-post a{
+  text-decoration: none;
 }
 
 .social-post-header {
@@ -247,7 +250,7 @@ html {
   margin-bottom: 10px;
 }
 .social-post-header h2 {
-  color: var(--white);
+  color: #222;
   font-size: 1.4rem;
 }
 
@@ -256,26 +259,25 @@ html {
   height: 60px;
   border-radius: 50%;
   border: 2px solid var(--white);
-  color: var(--brightGreen);
+  color: var(--darkGreen);
 }
 
 .social-platform-icon {
   width: 30px;
   height: 30px;
-  color: var(--grey);
+  color: var(--darkGreen);
 }
 
 .social-post-preview {
   font-size: var(--fontSize);
   line-height: 1.4;
-  color: #fff;
 }
 
 .social-post-image {
-  width: 300px;
+  width: 80%;
   height: auto;
   border-radius: 8px;
-  margin-top: 10px;
+  margin-top: 15px;
 }
 
 /* Responsive */
@@ -1041,6 +1043,7 @@ h1 span {
   border-radius: 3px;
   font-size: 0.85rem;
   margin-right: 10px;
+  margin-top: 10px;
   border: 1px solid rgba(0, 0, 0, 0.1);
   box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.1);
 }
