--- a/style.css
+++ b/style.css
@@ -2545,3 +2545,198 @@ body {
   font-size: 1rem;
   padding: 14px 18px;
 }
+
+/* >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>> Music Player<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<< */
+.music-card {
+  position: fixed;
+  bottom: 20px;
+  left: 20px;
+  width: 100%;
+  max-width: 300px;
+  height: auto;
+  background: var(--darkGreen);
+  border-radius: 10px;
+  padding: 10px;
+  font-family: var(--secondaryFont);
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  z-index: 300;
+}
+.music-top {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+.music-pfp {
+  height: 40px;
+  width: 40px;
+  background-color: #d2d2d2;
+  border-radius: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.music-titles {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.title-1 {
+  color: white;
+  font-size: 18px;
+}
+
+.title-2 {
+  color: white;
+  font-size: 12px;
+  margin-top: 2px;
+}
+
+.music-time {
+  width: 90%;
+  background-color: #5e5e5e;
+  height: 6px;
+  border-radius: 3px;
+  margin: 0 auto;
+  position: relative;
+}
+
+.music-elapsed {
+  width: 50%;
+  background-color: var(--brightGreen);
+  height: 100%;
+  border-radius: 3px;
+}
+
+/* Time Text */
+.music-timetext {
+  color: white;
+  font-size: 10px;
+  position: absolute;
+}
+
+.music-time_now {
+  bottom: -15px;
+  left: 10px;
+}
+
+.music-time_full {
+  bottom: -15px;
+  right: 10px;
+}
+
+/* Controls */
+.music-controls {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 15px;
+  padding: 10px 0;
+}
+
+.music-icon {
+  width: 24px;
+  height: 24px;
+  cursor: pointer;
+  transition: 0.1s;
+}
+
+.music-icon:hover {
+  transform: scale(1.1);
+}
+
+/* Volume Control */
+.music-volume {
+  position: relative;
+  opacity: 0;
+  transition: 0.2s;
+}
+
+.music-volume .slider {
+  height: 4px;
+  background-color: #5e5e5e;
+  width: 80%;
+  border-radius: 2px;
+  margin: 8px auto 0 auto;
+}
+
+.music-volume .slider .green {
+  position: relative;
+  background-color: var(--darkGreen);
+  height: 100%;
+  width: 80%;
+  border-radius: 3px;
+}
+
+.music-volume .circle {
+  background-color: white;
+  height: 6px;
+  width: 6px;
+  border-radius: 3px;
+  position: absolute;
+  right: 20%;
+  top: 60%;
+}
+
+.music-volume_button:hover ~ .music-volume {
+  opacity: 1;
+}
+.music-playing {
+  display: flex;
+  justify-content: center;
+  gap: 2px;
+  width: 30px;
+  height: 20px;
+}
+
+.music-greenline {
+  background-color: var(--complementaryGreen);
+  height: 20px;
+  width: 2px;
+  transform-origin: bottom;
+}
+
+.music-line-1 {
+  animation: infinite playing 1s ease-in-out;
+  animation-delay: 0.2s;
+}
+
+.music-line-2 {
+  animation: infinite playing 1s ease-in-out;
+  animation-delay: 0.5s;
+}
+
+.music-line-3 {
+  animation: infinite playing 1s ease-in-out;
+  animation-delay: 0.6s;
+}
+
+.music-line-4 {
+  animation: infinite playing 1s ease-in-out;
+  animation-delay: 0s;
+}
+
+.music-line-5 {
+  animation: infinite playing 1s ease-in-out;
+  animation-delay: 0.4s;
+}
+
+@keyframes playing {
+  0% {
+    transform: scaleY(0.1);
+  }
+
+  33% {
+    transform: scaleY(0.6);
+  }
+
+  66% {
+    transform: scaleY(0.9);
+  }
+
+  100% {
+    transform: scaleY(0.1);
+  }
+}
