--- a/style.css
+++ b/style.css
@@ -1315,6 +1315,7 @@ h1 span {
 /* <!-- >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>Thank you card<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<< --> */
 
 #passionCard {
+  border-radius: 10px;
   border: 1px solid var(--grey);
   border-left: 5px solid var(--grey);
   width: 90%;
