--- a/style.css
+++ b/style.css
@@ -377,12 +377,12 @@ html {
   height: 500px;
   font-size: var(--fontSize);
   cursor: pointer;
-  background: white;
+  background: var(--darkGreen);
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1);
   transition: transform 0.3s ease-in-out;
-  color: #555;
+  color: var(--white);
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -422,7 +422,7 @@ html {
 }
 
 .social-post-info h2 {
-  color: #222;
+  color: var(--white);
   font-size: 1.2rem;
   margin: 0;
 }
@@ -440,7 +440,7 @@ html {
 .social-post-preview {
   font-size: var(--fontSize);
   line-height: 1.5;
-  color: #444;
+  color: var(--white);
   flex-grow: 1;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -1266,7 +1266,7 @@ h1 span {
   font-size: 0.9rem;
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 1024px) {
   .project-item {
     flex-direction: column;
     align-items: flex-start;
@@ -1282,7 +1282,7 @@ h1 span {
   }
 
   .project-preview img {
-    width: 300px;
+    width: 95%;
     height: auto;
   }
 }
@@ -2406,7 +2406,7 @@ body {
 }
 
 /*-----------------------------------Responsive Design--------------------------------------------------------*/
-@media only screen and (min-width: 251px) and (max-width: 600px) /* 250px optimisation to come */ {
+@media only screen and (min-width: 251px) and (max-width: 600px) /* 250px optimisation to come -- I think */ {
   * {
     --fontSize: 1rem;
   }
@@ -2601,6 +2601,29 @@ body {
 }
 
 /* >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>> Music Player<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<< */
+.music-toggle {
+  background-color: var(--darkGreen);
+  color: white;
+  font-size: 1.5rem;
+  padding: 10px 15px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  position: fixed;
+  bottom: 20px;
+  left: 20px; /* Positioned at the bottom-left */
+  z-index: 1000;
+  transition: transform 0.5s, opacity 0.3s;
+}
+
+.music-toggle img {
+  width: 30px;
+  height: auto;
+}
+
+.music-toggle:hover {
+  transform: scale(1.1);
+}
 .music-card {
   position: fixed;
   bottom: 20px;
@@ -2612,7 +2635,7 @@ body {
   border-radius: 10px;
   padding: 10px;
   font-family: var(--secondaryFont);
-  display: flex;
+  display: none;
   flex-direction: column;
   gap: 10px;
   z-index: 300;
@@ -2655,6 +2678,7 @@ body {
   border-radius: 3px;
   margin: 0 auto;
   position: relative;
+  cursor: pointer;
 }
 
 .music-elapsed {
@@ -2738,26 +2762,31 @@ body {
 .music-line-1 {
   animation: infinite playing 1s ease-in-out;
   animation-delay: 0.2s;
+  animation-play-state: paused;
 }
 
 .music-line-2 {
   animation: infinite playing 1s ease-in-out;
   animation-delay: 0.5s;
+  animation-play-state: paused;
 }
 
 .music-line-3 {
   animation: infinite playing 1s ease-in-out;
   animation-delay: 0.6s;
+  animation-play-state: paused;
 }
 
 .music-line-4 {
   animation: infinite playing 1s ease-in-out;
   animation-delay: 0s;
+  animation-play-state: paused;
 }
 
 .music-line-5 {
   animation: infinite playing 1s ease-in-out;
   animation-delay: 0.4s;
+  animation-play-state: paused;
 }
 
 @keyframes playing {
