--- a/style.css
+++ b/style.css
@@ -1795,19 +1795,14 @@ h6 {
 }
 
 .story-icon {
-  width: 70px;
-  height: 70px;
+  width: 100px;
+  height: 100px;
   border-radius: 50%;
   cursor: pointer;
   object-fit: cover;
-  border: 3px solid white;
-  transition: transform 0.2s ease-in-out;
+  border: 2px solid white;
+  transition: border 0.5s;
 }
-
-.story-icon:hover {
-  transform: scale(1.1);
-}
-
 .story-viewer {
   position: fixed;
   top: 0;
